Latest progress on Wen site for day care. Working on registering child by website

--- a/DataLibrary/DataLibrary.csproj
+++ b/DataLibrary/DataLibrary.csproj
@@ -71,11 +71,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLogic\ChildAccess.cs" />
     <Compile Include="BusinessLogic\ForumAccess.cs" />
     <Compile Include="BusinessLogic\IDataAccess.cs" />
     <Compile Include="BusinessLogic\IForumAccess.cs" />
+    <Compile Include="BusinessLogic\IModelDataAccess.cs" />
+    <Compile Include="BusinessLogic\ParentAccess.cs" />
     <Compile Include="BusinessLogic\SqlDataAccess.cs" />
+    <Compile Include="Models\ChildModel.cs" />
     <Compile Include="Models\ForumModel.cs" />
+    <Compile Include="Models\ParentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
