Image and Secrets
Added a new banner image to web site and also changed connection string secrets

--- a/CrecheApp/CrecheApp.csproj
+++ b/CrecheApp/CrecheApp.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\DataLibrary\DataLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\images\BannerLinesLadyByRiverS.png" />
+  </ItemGroup>
+
 </Project>
